# op-hornet

./: , debug.js, check-.js, test_report.pdf -ErrorAction SilentlyContinue  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  backup_before_rls.sql  check-syntax.js  debug.js  debug2.js  docker-compose.yml  expandable_findings.py  fix-campaigns.js  fix-campaigns2.js  fix-export-btn.js  fix-final.js  fix-final2.js  fix-incident.js  fix-main.js  fix-position.js  fix-position2.js  fix-position3.js  fix-sidebar.js  fix_dash3.py  fix_dashboard.py  fix_dashboard2.py  migration_v1_multitenancy.sql  migration_v2_app_user.sql  mobile_optimize.py  pyproject.toml  requirements.txt  restore_full_dashboard.py  setup.py  test_edge_agent.py  update_logo.py  verify.js
alembic/: env.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  PLAYBOOKS.md
examples/: config_production.yaml  event_brute_force.json  event_exfiltration.json  event_lateral_movement.json  event_phishing.json  event_ransomware.json
hornet/: __init__.py  cli.py  config.py  db.py  logging_config.py  main.py  repository.py  repository.py.bak  worker.py
hornet-dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  redis.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
monitoring/: grafana-dashboard.json  prometheus-rules.yaml
scripts/: synth.py
tests/: __init__.py  conftest.py  (+18 more)
(+88 files in other folders)
