[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hornet"
version = "2.0.0"
description = "Autonomous SOC Swarm - 54-Agent Security Operations Center"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
